globus-gatekeeper (10.9-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:12:40 -0500

globus-gatekeeper (10.8-2+gt6.@distro@) @distro@; urgency=low

  * GT-566: Debian packages look for configuration in /usr/etc and state in /usr/var

 -- Globus Toolkit <support@globus.org>  Mon, 20 October 2014 15:55:54 -0400

globus-gatekeeper (10.8-1+gt6.@distro@) @distro@; urgency=low

  * GT-455: Incorporate OSG patches
  * GT-465: OSG patch "gatekeeper-logrotate-copytruncate.patch" for globus-gatekeeper

 -- Globus Toolkit <support@globus.org>  Thu, 18 Sep 2014 16:02:19 -0400

globus-gatekeeper (10.7-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gatekeeper (10.6-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gatekeeper (10.6-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gatekeeper (10.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:45 -0400

globus-gatekeeper (10.5-2+gt6.@distro@) @distro@; urgency=low

  * Use globus_libc_[un]setenv
  * Fix path to initializer

 -- Globus Toolkit <support@globus.org>  Fri, 23 May 2014 12:11:26 -0400

globus-gatekeeper (10.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-gatekeeper (10.3-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:58 -0400

globus-gatekeeper (10.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup
