@@ -1,6 +1,6 @@
 Name: globus-gatekeeper
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_gatekeeper-10.9.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_gatekeeper-10.10.tar.gz
 
 
 
