@@ -1,3 +1,10 @@
+globus-gatekeeper (10.10-1+gt6.@distro@) @distro@; urgency=low
+
+  * - Remove Dead Code
+  * - Require minimal lsb-core for RHEL 6+ and fedora 20+
+
+ -- Globus Toolkit <support@globus.org>  Mon, 06 Apr 2015 14:25:43 -0400
+
 globus-gatekeeper (10.9-1+gt6.@distro@) @distro@; urgency=low
 
   * doxygen fixes
